force-app/main/default/objects/OneOrg__c/OneOrg__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OneOrg</label>
</CustomObject>