force-app/main/default/objects/OneOrg__c/fields/ArgentinaTriggers__c.field-meta.xml
<CustomField>
    <fullName>ArgentinaTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Argentina-Triggers</label>
    <type>Checkbox</type>
</CustomField>