force-app/main/default/objects/OneOrg__c/fields/ArgentinaValidationRules__c.field-meta.xml
<CustomField>
    <fullName>ArgentinaValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Argentina-ValidationRules</label>
    <type>Checkbox</type>
</CustomField>