force-app/main/default/objects/OneOrg__c/fields/ArgentinaWorkflow__c.field-meta.xml
<CustomField>
    <fullName>ArgentinaWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Argentina-Workflow</label>
    <type>Checkbox</type>
</CustomField>