force-app/main/default/objects/OneOrg__c/fields/BrasilTriggers__c.field-meta.xml
<CustomField>
    <fullName>BrasilTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brasil-Triggers</label>
    <type>Checkbox</type>
</CustomField>