force-app/main/default/objects/OneOrg__c/fields/BrasilValidationRules__c.field-meta.xml
<CustomField>
    <fullName>BrasilValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brasil-ValidationRules</label>
    <type>Checkbox</type>
</CustomField>