force-app/main/default/objects/OneOrg__c/fields/BrasilWorkflow__c.field-meta.xml
<CustomField>
    <fullName>BrasilWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brasil-Workflow</label>
    <type>Checkbox</type>
</CustomField>