force-app/main/default/objects/OneOrg__c/fields/ChileTriggers__c.field-meta.xml
<CustomField>
    <fullName>ChileTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chile-Triggers</label>
    <type>Checkbox</type>
</CustomField>