force-app/main/default/objects/OneOrg__c/fields/ChileValidationRules__c.field-meta.xml
<CustomField>
    <fullName>ChileValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chile-ValidationRules</label>
    <type>Checkbox</type>
</CustomField>