force-app/main/default/objects/OneOrg__c/fields/ChileWorkflow__c.field-meta.xml
<CustomField>
    <fullName>ChileWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chile-Workflow</label>
    <type>Checkbox</type>
</CustomField>