force-app/main/default/objects/OneOrg__c/fields/ColombiaTriggers__c.field-meta.xml
<CustomField>
    <fullName>ColombiaTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colombia-Triggers</label>
    <type>Checkbox</type>
</CustomField>