force-app/main/default/objects/OneOrg__c/fields/ColombiaValidationRules__c.field-meta.xml
<CustomField>
    <fullName>ColombiaValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colombia-ValidationRules</label>
    <type>Checkbox</type>
</CustomField>