force-app/main/default/objects/OneOrg__c/fields/ColombiaWorkflow__c.field-meta.xml
<CustomField>
    <fullName>ColombiaWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colombia-Workflow</label>
    <type>Checkbox</type>
</CustomField>