force-app/main/default/objects/OneOrg__c/fields/PeruTriggers__c.field-meta.xml
<CustomField>
    <fullName>PeruTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peru-Triggers</label>
    <type>Checkbox</type>
</CustomField>