force-app/main/default/objects/OneOrg__c/fields/PeruValidationRules__c.field-meta.xml
<CustomField>
    <fullName>PeruValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peru-ValidationRules</label>
    <type>Checkbox</type>
</CustomField>