force-app/main/default/objects/OneOrg__c/fields/PeruWorkflow__c.field-meta.xml
<CustomField>
    <fullName>PeruWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peru-Workflow</label>
    <type>Checkbox</type>
</CustomField>